explore buttom animation added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,23 +15,28 @@
 <body class="background">
 
   <div class="navigation-container">
-    <p class="nav-text">00 Home</p>
-    <p class="nav-text">01 Destination</p>
-    <p class="nav-text">02 Crew</p>
-    <p class="nav-text">03 Technology</p>
+    <div class="navigation-box">
+    <div class="navigation-sections">
+      <p class="nav-text">00 Home</p>
+      <p class="nav-text">01 Destination</p>
+      <p class="nav-text">02 Crew</p>
+      <p class="nav-text">03 Technology</p>
+      </div>
+    </div>
   </div>
 
-  <div class="left-container">
-    <h5>So, you want to travel to</h5>
-    <h1>Space</h1>
-    <p>Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!</p>
-  </div>
+  <div class="body-container">
+    <div class="left-container">
+      <h5>So, you want to travel to</h5>
+      <h1>Space</h1>
+      <p>Let’s face it; if you want to go to space, you might as well genuinely go to
+      outer space and not hover kind of on the edge of it. Well sit back, and relax
+      because we’ll give you a truly out of this world experience!</p>
+    </div>
 
-  <div class="right-container">
-    <p class="explore">Explore</p>
+    <div class="right-container">
+      <div class="explore">Explore</div>
   </div>
-
+  </div>
 </body>
 </html>
