--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,15 +15,20 @@
 <body class="background">
 
   <div class="navigation-container">
+    <div class="logo"><img src="assets/shared/logo.svg" alt="logo"></div>
+
     <div class="navigation-box">
-    <div class="navigation-sections">
-      <p class="nav-text">00 Home</p>
-      <p class="nav-text">01 Destination</p>
-      <p class="nav-text">02 Crew</p>
-      <p class="nav-text">03 Technology</p>
+      <div class="navigation-sections">
+        <p class="nav-text"><span class="nav-text-bold">00</span> Home</p>
+        <p class="nav-text"><span class="nav-text-bold">01</span> Destination</p>
+        <p class="nav-text"><span class="nav-text-bold">02</span> Crew</p>
+        <p class="nav-text"><span class="nav-text-bold">03</span> Technology</p>
       </div>
+
     </div>
+    <hr class="navigation-line">
   </div>
+  <br>
 
   <div class="body-container">
     <div class="left-container">
