--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -5,15 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/crew-styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body class="background">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <div class="navigation-container">
+    <div class="logo"><img src="assets/shared/logo.svg" alt="logo"></div>
+
+    <div class="navigation-box">
+      <div class="navigation-sections">
+        <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
+        <a href="destination-moon.html"><p class="nav-text"><span class="nav-text-bold">01</span> Destination</p></a>
+        <a href="crew-commander.html"><p class="nav-text active-tab"><span class="nav-text-bold">02</span> Crew</p></a>
+        <a href="technology-capsule.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
+      </div>
+
+    </div>
+    <hr class="navigation-line">
+  </div>
+  <br>
 
   02 Meet your crew
 
