--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,10 +19,10 @@
 
     <div class="navigation-box">
       <div class="navigation-sections">
-        <p class="nav-text"><span class="nav-text-bold">00</span> Home</p>
-        <p class="nav-text"><span class="nav-text-bold">01</span> Destination</p>
-        <p class="nav-text"><span class="nav-text-bold">02</span> Crew</p>
-        <p class="nav-text"><span class="nav-text-bold">03</span> Technology</p>
+        <a href="index.html"><p class="nav-text active-tab"><span class="nav-text-bold">00</span> Home</p></a>
+        <a href="destination-moon.html"><p class="nav-text"><span class="nav-text-bold">01</span> Destination</p></a>
+        <a href="crew-commander.html"><p class="nav-text"><span class="nav-text-bold">02</span> Crew</p></a>
+        <a href="technology-capsule"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
       </div>
 
     </div>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="right-container">
-      <div class="explore">Explore</div>
+      <a href="destination-moon.html"><div class="explore">Explore</div></a>
   </div>
   </div>
 </body>
