--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -30,13 +30,29 @@
   </div>
   <br>
 
-  02 Meet your crew
+  <div class="left-container">
+    <h5><span class="h5-bold">02</span> Meet your crew</h5>
 
-  Commander
-  Douglas Hurley
+    <h4>Commander</h4>
+    <h3>Douglas Hurley</h3>
 
-  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-  and former NASA astronaut. He launched into space for the third time as 
-  commander of Crew Dragon Demo-2.
+    <p>Douglas Gerald Hurley is an American engineer, former Marine Corps pilot
+    and former NASA astronaut. He launched into space for the third time as
+    commander of Crew Dragon Demo-2.</p>
+
+    <div class="crew-links">
+      <a class="crew-button crew-button-active" href="crew-commander.html"> </a>
+      <a class="crew-button" href="crew-specialist.html"> </a>
+      <a class="crew-button" href="crew-engineer.html"> </a>
+      <a class="crew-button" href="crew-pilot.html"> </a>
+    </div>
+  </div>
+
+  <div class="right-container douglas">
+
+    <img src="assets/crew/image-douglas-hurley.png">
+
+  </div>
+
 </body>
 </html>
