--- a/starter-code/crew-pilot.html
+++ b/starter-code/crew-pilot.html
@@ -5,24 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/crew-styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body class="background">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<div class="navigation-container">
+    <div class="logo"><img src="assets/shared/logo.svg" alt="logo"></div>
 
-  02 Meet your crew
+    <div class="navigation-box">
+      <div class="navigation-sections">
+        <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
+        <a href="destination-moon.html"><p class="nav-text"><span class="nav-text-bold">01</span> Destination</p></a>
+        <a href="crew-commander.html"><p class="nav-text active-tab"><span class="nav-text-bold">02</span> Crew</p></a>
+        <a href="technology-capsule.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
+      </div>
 
-  Pilot
-  Victor Glover
+    </div>
+    <hr class="navigation-line">
+  </div>
+  <br>
 
-  Pilot on the first operational flight of the SpaceX Crew Dragon to the 
-  International Space Station. Glover is a commander in the U.S. Navy where 
-  he pilots an F/A-18.He was a crew member of Expedition 64, and served as a 
-  station systems flight engineer. 
+  <div class="left-container">
+    <h5><span class="h5-bold">02</span> Meet your crew</h5>
+
+    <h4>Pilot</h4>
+    <h3>Victor Glover</h3>
+
+    <p>Pilot on the first operational flight of the SpaceX Crew Dragon to the
+  International Space Station. Glover is a commander in the U.S. Navy where
+  he pilots an F/A-18.He was a crew member of Expedition 64, and served as a
+  station systems flight engineer.</p>
+
+    <div class="crew-links">
+      <a class="crew-button" href="crew-commander.html"> </a>
+      <a class="crew-button" href="crew-specialist.html"> </a>
+      <a class="crew-button" href="crew-engineer.html"> </a>
+      <a class="crew-button crew-button-active" href="crew-pilot.html"> </a>
+    </div>
+  </div>
+
+  <div class="right-container victor">
+
+    <img src="assets/crew/image-victor-glover.png">
+
+  </div>
+
+
+
+
+
 </body>
 </html>
