--- a/starter-code/crew-specialist.html
+++ b/starter-code/crew-specialist.html
@@ -5,23 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/crew-styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body class="background">
 
-  02 Meet your crew
+  <div class="navigation-container">
+    <div class="logo"><img src="assets/shared/logo.svg" alt="logo"></div>
 
-  Mission Specialist
-  Mark Shuttleworth
+    <div class="navigation-box">
+      <div class="navigation-sections">
+        <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
+        <a href="destination-moon.html"><p class="nav-text"><span class="nav-text-bold">01</span> Destination</p></a>
+        <a href="crew-commander.html"><p class="nav-text active-tab"><span class="nav-text-bold">02</span> Crew</p></a>
+        <a href="technology-capsule.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
+      </div>
 
-  Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind 
-  the Linux-based Ubuntu operating system. Shuttleworth became the first South 
-  African to travel to space as a space tourist.
+    </div>
+    <hr class="navigation-line">
+  </div>
+  <br>
+  <div class="left-container">
+    <h5><span class="h5-bold">02</span> Meet your crew</h5>
+
+    <h4>Mission Specialist</h4>
+    <h3>Mark Shuttleworth</h3>
+
+    <p>  Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind
+  the Linux-based Ubuntu operating system. Shuttleworth became the first South
+  African to travel to space as a space tourist.</p>
+
+    <div class="crew-links">
+      <a class="crew-button" href="crew-commander.html"> </a>
+      <a class="crew-button crew-button-active" href="crew-specialist.html"> </a>
+      <a class="crew-button" href="crew-engineer.html"> </a>
+      <a class="crew-button" href="crew-pilot.html"> </a>
+    </div>
+  </div>
+
+  <div class="right-container mark">
+
+      <img src="assets/crew/image-mark-shuttleworth.png">
+
+  </div>
+
 </body>
 </html>
