--- a/starter-code/destination-europa.html
+++ b/starter-code/destination-europa.html
@@ -5,34 +5,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/destination-styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body class="background">
 
-  01 Pick your destination
+  <div class="navigation-container">
+    <div class="logo">
+      <img src="assets/shared/logo.svg" alt="logo">
+    </div>
 
-  Moon
-  Mars
-  Europa
-  Titan
+    <div class="navigation-box">
+      <div class="navigation-sections">
+        <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
+        <a href="destination-moon.html"><p class="nav-text active-tab"><span class="nav-text-bold">01</span> Destination</p></a>
+        <a href="crew-commander.html"><p class="nav-text"><span class="nav-text-bold">02</span> Crew</p></a>
+        <a href="technology-capsule.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
+      </div>
+    </div>
+    <hr class="navigation-line">
+  </div>
+  <br>
 
-  Europa
+<div class="body-container">
 
-  The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
-  winter lover’s dream. With an icy surface, it’s perfect for a bit of 
-  ice skating, curling, hockey, or simple relaxation in your snug 
-  wintery cabin.
+    <div class="left-container">
+      <h5><span class="h5-bold">01</span> Pick your destination</h5>
+      <img class="europa" src="assets/destination/image-europa.png">
+    </div>
 
-  Avg. distance
-  628 mil. km
+    <div class="right-container">
+      <div class="destination-navigation">
+      <a class="nav-text" href="destination-moon.html">Moon</a>
+      <a class="nav-text" href="destination-mars.html">Mars</a>
+      <a class="nav-text nav-text-bold active-tab" href="destination-europa.html">Europa</a>
+      <a class="nav-text" href="destination-titan.html">Titan</a>
+      </div>
 
-  Est. travel time
-  3 years
+      <h2>Europa</h2>
+      <p>The smallest of the four Galilean moons orbiting Jupiter, Europa is a
+          winter lover’s dream. With an icy surface, it’s perfect for a bit of
+          ice skating, curling, hockey, or simple relaxation in your snug
+          wintery cabin.</p>
+      <div class="statistics">
+        <hr>
+        <br>
+        <div class="distance">
+          <p class="subheading-2">Avg. distance</p>
+          <p class="subheading-1">628 mil. km</p>
+        </div>
+        <div class="time">
+          <p class="subheading-2">Est. travel time</p>
+          <p class="subheading-1">3 years</p>
+        </div>
+      </div>
+    </div>
+  <br>
+</div>
 </body>
 </html>
