--- a/starter-code/destination-mars.html
+++ b/starter-code/destination-mars.html
@@ -3,35 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/destination-styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body class="background">
+  <div class="navigation-container">
+    <div class="logo">
+      <img src="assets/shared/logo.svg" alt="logo">
+    </div>
 
-  01 Pick your destination
+    <div class="navigation-box">
+      <div class="navigation-sections">
+        <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
+        <a href="destination-moon.html"><p class="nav-text active-tab"><span class="nav-text-bold">01</span> Destination</p></a>
+        <a href="crew-commander.html"><p class="nav-text"><span class="nav-text-bold">02</span> Crew</p></a>
+        <a href="technology-capsule.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
+      </div>
+    </div>
+    <hr class="navigation-line">
+  </div>
+  <br>
 
-  Moon
-  Mars
-  Europa
-  Titan
+<div class="body-container">
 
-  Mars
+    <div class="left-container">
+      <h5><span class="h5-bold">01</span> Pick your destination</h5>
+      <img class="mars" src="assets/destination/image-mars.png">
+    </div>
 
-  Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, 
-  the tallest planetary mountain in our solar system. It’s two and a half times 
-  the size of Everest!
+    <div class="right-container">
+      <div class="destination-navigation">
+      <a class="nav-text" href="destination-moon.html">Moon</a>
+      <a class="nav-text nav-text-bold active-tab" href="destination-mars.html">Mars</a>
+      <a class="nav-text" href="destination-europa.html">Europa</a>
+      <a class="nav-text" href="destination-titan.html">Titan</a>
+      </div>
 
-  Avg. distance
-  225 mil. km
+      <h2>Mars</h2>
+      <p>Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,
+      the tallest planetary mountain in our solar system. It’s two and a half times
+      the size of Everest!</p>
+      <div class="statistics">
+        <hr>
+        <br>
+        <div class="distance">
+          <p class="subheading-2">Avg. distance</p>
+          <p class="subheading-1">225 mil. km</p>
+        </div>
+        <div class="time">
+          <p class="subheading-2">Est. travel time</p>
+          <p class="subheading-1">9 months</p>
+        </div>
+      </div>
 
-  Est. travel time
-  9 months
+
+    </div>
+
+  <br>
+
+
+</div>
+
 </body>
 </html>
