added link to technology-vehicle.html

--- a/starter-code/destination-titan.html
+++ b/starter-code/destination-titan.html
@@ -26,7 +26,7 @@
         <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
         <a href="destination-moon.html"><p class="nav-text active-tab"><span class="nav-text-bold">01</span> Destination</p></a>
         <a href="crew-commander.html"><p class="nav-text"><span class="nav-text-bold">02</span> Crew</p></a>
-        <a href="technology-capsule.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
+        <a href="technology-vehicle.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
       </div>
     </div>
     <hr class="navigation-line">
@@ -42,10 +42,10 @@
 
     <div class="right-container">
       <div class="destination-navigation">
-      <a class="nav-text" href="destination-moon.html">Moon</a>
-      <a class="nav-text" href="destination-mars.html">Mars</a>
-      <a class="nav-text" href="destination-europa.html">Europa</a>
-      <a class="nav-text nav-text-bold active-tab" href="destination-titan.html">Titan</a>
+      <a class="dest-nav-text" href="destination-moon.html">Moon</a>
+      <a class="dest-nav-text" href="destination-mars.html">Mars</a>
+      <a class="dest-nav-text" href="destination-europa.html">Europa</a>
+      <a class="dest-nav-text dest-nav-text-bold active-tab" href="destination-titan.html">Titan</a>
       </div>
 
       <h2>Titan</h2>
