--- a/starter-code/crew-engineer.html
+++ b/starter-code/crew-engineer.html
@@ -22,7 +22,7 @@
         <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
         <a href="destination-moon.html"><p class="nav-text"><span class="nav-text-bold">01</span> Destination</p></a>
         <a href="crew-commander.html"><p class="nav-text active-tab"><span class="nav-text-bold">02</span> Crew</p></a>
-        <a href="technology-capsule.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
+        <a href="technology-vehicle.html"><p class="nav-text"><span class="nav-text-bold">03</span> Technology</p></a>
       </div>
 
     </div>
