--- a/starter-code/technology-vehicle.html
+++ b/starter-code/technology-vehicle.html
@@ -5,28 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/technology-styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body class="background">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<div class="navigation-container">
+    <div class="logo">
+      <img src="assets/shared/logo.svg" alt="logo">
+    </div>
 
-  03 Space launch 101
+    <div class="navigation-box">
+      <div class="navigation-sections">
+        <a href="index.html"><p class="nav-text"><span class="nav-text-bold">00</span> Home</p></a>
+        <a href="destination-moon.html"><p class="nav-text"><span class="nav-text-bold">01</span> Destination</p></a>
+        <a href="crew-commander.html"><p class="nav-text"><span class="nav-text-bold">02</span> Crew</p></a>
+        <a href="technology-vehicle.html"><p class="nav-text active-tab"><span class="nav-text-bold">03</span> Technology</p></a>
+      </div>
+    </div>
+    <hr class="navigation-line">
+  </div>
+  <br>
 
-  1
-  2
-  3
+  <div class="body-container">
+    <div class="left-container">
+      <h5><span class="h5-bold">03</span> Space launch 101</h5>
 
-  The terminology...
-  Launch vehicle
+      <div class="technology-navigation">
+        <div>
+        <a  href="technology-vehicle.html"><h4 class="technology-button">1</h4></a>
+        </div>
+        <div><a href="technology-spaceport.html"><h4 class="technology-button">2</h4></a>
+        </div>
+        <div>
+        <a href="technology-capsule.html"><h4 class="technology-button">3</h4></a>
+        </div>
+      </div>
 
-  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-  payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-  WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-  it's quite an awe-inspiring sight on the launch pad!
+      <div class="middle-container">
+        <div class="description">
+            <p class="nav-text">The terminology...</p>
+            <h3>Launch vehicle</h3>
+
+            <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a
+            payload from Earth's surface to space, usually to Earth orbit or beyond. Our
+            WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall,
+            it's quite an awe-inspiring sight on the launch pad!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="right-container">
+      <img src="assets/technology/image-launch-vehicle-portrait.jpg">
+    </div>
+
+  </div>
 </body>
 </html>
