--- a/starter-code/technology-vehicle.html
+++ b/starter-code/technology-vehicle.html
@@ -37,25 +37,28 @@
       <h5><span class="h5-bold">03</span> Space launch 101</h5>
 
       <div class="technology-navigation">
-        <div>
-        <a  href="technology-vehicle.html"><h4 class="technology-button">1</h4></a>
+        <div class="button-container">
+        <a  href="technology-vehicle.html"><p class="technology-button button-font technology-button-active">1</p></a>
         </div>
-        <div><a href="technology-spaceport.html"><h4 class="technology-button">2</h4></a>
+        <div class="button-container"><a href="technology-spaceport.html"><p class="technology-button button-font">2</p></a>
         </div>
-        <div>
-        <a href="technology-capsule.html"><h4 class="technology-button">3</h4></a>
+        <div class="button-container">
+        <a href="technology-capsule.html"><p class="technology-button button-font">3</p></a>
         </div>
       </div>
 
-      <div class="middle-container">
-        <div class="description">
-            <p class="nav-text">The terminology...</p>
-            <h3>Launch vehicle</h3>
+        <div class="middle-container">
+            <div class="description">
+                <p class="terminology">The terminology...</p>
 
-            <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a
-            payload from Earth's surface to space, usually to Earth orbit or beyond. Our
-            WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall,
-            it's quite an awe-inspiring sight on the launch pad!</p>
+
+                <h3>Launch vehicle</h3>
+
+                <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a
+                payload from Earth's surface to space, usually to Earth orbit or beyond. Our
+                WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall,
+                it's quite an awe-inspiring sight on the launch pad!</p>
+            </div>
         </div>
       </div>
     </div>
